# reaction

./: .clang-format  CMakeLists.txt  LICENSE  README.md
example/: basic_example.cpp  field_example.cpp  stressTest_example.cpp  trigger_example.cpp
include/reaction/: concept.h  dataSource.h  exception.h  expression.h  invalidStrategy.h  log.h  observerHelper.h  observerNode.h  react.h  reaction.h  resource.h  timerWheel.h  triggerMode.h  utility.h
test/: test.cpp
